# EduLense

./: README.md  docker-compose.yml  package.json  setup.sh
ai/: Dockerfile  pyproject.toml
ai/app/: main.py
ai/app/api/: ai_router.py
ai/app/services/: ollama_client.py
ai/tests/: test_health.py
backend/: Makefile  env.example  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
backend/app/: main.py
backend/app/api/v1/: __init__.py  study_router.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: base.py  models.py
backend/app/services/: ai_client.py
backend/src/: index.ts
backend/src/database/: init.ts
backend/src/routes/: ai.ts  fileUpload.ts  study.ts
backend/src/services/: aiService.ts  pdfProcessor.ts  videoProcessor.ts
backend/tests/: test_health.py
frontend/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/__tests__/: FileUpload.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FileList.tsx  FileUpload.tsx  StudyDashboard.tsx
frontend/src/: App.tsx
